--- a/css/style.css
+++ b/css/style.css
@@ -1,52 +1,78 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;1,200&display=swap');
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
   overflow-x: hidden;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
-.search-field {
-  border: none;
-  border-radius: 50px;
-  padding: 5px;
+.head {
+  padding: 15px 0px;
+  background-color: rgb(116, 245, 228);
+  margin-bottom: 40px;
+}
+#search-input{
   outline: none;
-}
-.search-field:hover {
-  outline: none;
   border: none;
+  padding: 10px;
 }
-.search-box {
-  border: 1px solid rgb(3, 118, 211);
-  width: 281px;
-  border-radius: 5px;
-  margin: auto;
-  margin-top: 50px;
-  border-right: none;
+#search-btn {
+  background-color: white;
+  border: none;
+  cursor: pointer;
 }
-.search-button {
-  padding: 10px 50px;
-  border-radius: 25px;
-  margin-left: 20px;
-}
+
 #all-products {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  /* display: grid; */
+  /* grid-template-columns: repeat(3, 1fr); */
   /* border: 1px solid black; */
-  text-align: center;
-  width: 100%;
-  margin: auto;
-  align-items: center;
-  justify-content: center;
+  /* text-align: center; */
+  /* width: 100%; */
+  /* margin: auto; */
+  /* align-items: center; */
+  /* justify-content: center; */
 }
+/* .product{
+  min-height: 500px;
+} */
 .single-product {
   padding: 10px;
   transition: 0.6s;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .single-product:hover {
-  box-shadow: 4px 4px 7px gray;
+  box-shadow: 1px 1px 15px rgb(172, 170, 170);
   border-radius: 10px;
-  border: 1px solid cyan;
+  /* border: 1px solid cyan; */
+}
+/* .product-img{
+  height: 50%;
+} */
+.product-head{
+  /* height: 200px; */
+  padding: 40px;
+
 }
 .product-image {
   width: 150px;
-  height: 150px;
+  height: 200px;
+  /* height:100%; */
+  /* padding: 40px; */
+}
+/* .products-info{
+  height: 50%;
+} */
+#addToCart-btn{
+  background-color: green;
+}
+#details-btn{
+  background-color: rgb(243, 3, 95);
 }
 .cart {
   width: 350px;
